<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ly_title_tttsett"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/ly_buttons_tttsett"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textv_title_tttsett"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_settings"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_buttons_tttsett"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ly_title_tttsett">

        <TextView
            android:id="@+id/textv_sign_tttsett"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginTop="3dp"
            android:text="@string/str_textv_pick_sign_ttt"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/ly_sign_tttsett"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_sign_x_tttsett"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_weight="2"
                android:text="X"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_sign_o_tttsett"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_weight="2"
                android:text="O"
                android:textSize="24sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/ly_color_tttsett"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginTop="16dp"
            android:text="@string/str_textv_pick_color_ttt"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/ly_color_buttons_tttsett"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="34dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="34dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_color_01_tttsett"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="#ff000000" />

            <Button
                android:id="@+id/btn_color_02_tttsett"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="#ffff234b" />

            <Button
                android:id="@+id/btn_color_03_tttsett"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="#ff0000ff" />

            <Button
                android:id="@+id/btn_color_04_tttsett"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="#ff00b235" />

            <Button
                android:id="@+id/btn_back_tttsett"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@color/colorPrimary"
                android:text="@string/str_back" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>