...
        player can choose between various colors for the block and background.
        For every touch the gamer gains a point. If the player fails to touch the block, he can use 10 of his score points to continue the game
        at the point he failed. </string>

    <string name="str_textv_score">Score:</string>
    <string name="str_textv_statistic_ttb">Touch the Block:</string>
    <string name="str_textv_statistic_ttt">Tic Tac Toe:</string>
    <string name="str_textv_statistic_hm">Hangman:</string>

    <string name="str_reset">Reset</string>
    <string name="str_back">Back</string>
    <string name="str_confirm">Confirm</string>

    <string name="str_settings">Settings</string>

    <string name="str_title_ttt">Tic Tac Toe</string>
    <string name="str_textv_player1_turn_ttt">Player X turn!</string>
    <string name="str_textv_player2_turn_ttt">Player O turn!</string>
    <string name="str_textv_player1_wins_ttt">Player X wins!</string>
    <string name="str_textv_player2_wins_ttt">Player O wins!</string>
    <string name="str_textv_draw_ttt">Draw!</string>
    <string name="str_cbox_text_autoplayer_easy_ttt">Enable Easy Autoplayer</string>
    <string name="str_cbox_text_autoplayer_hard_ttt">Enable Hard Autoplayer</string>
    <string name="str_textv_pick_color_ttt">Pick your Color:</string>
    <string name="str_textv_pick_sign_ttt">Pick your Sign:</string>

    <string name="str_title_ttb">Touch The Block</string>
...
